2003-11-09  Damon Chaplin  <damon@gnome.org>

	* apps.html: added configure-thinkpad.

	* lists.html: add link to glademm mailing list.

2003-10-22  Damon Chaplin  <damon@gnome.org>

	* FAQ: synced with version in Glade.

2003-07-18  Damon Chaplin  <damon@gnome.org>

	* apps.html: added Sussen.

	* index.html: added line to new tutorial.

2003-05-30  Damon Chaplin  <damon@gnome.org>

	* index.html: added link to new Spanish guide to Glade.

2003-05-12  Damon Chaplin  <damon@gnome.org>

	* index.html: updated links to Olivier Karquel's French docs.
	added link to new tutorial.

2003-04-28  Damon Chaplin  <damon@gnome.org>

	* index.html: added pointer to Dutch translation of manual.

	* apps.html: moved TiLP to Glade 2 section and mentioned it uses
	libglade. Added gequel.

2003-04-20  Damon Chaplin  <damon@gnome.org>

	* index.html: 
	* history.html: 
	* download.html: updated for 2.0.0 release.

2003-03-19  Damon Chaplin  <damon@gnome.org>

	* apps.html: added a bunch of apps.

2003-02-08  Damon Chaplin  <damon@gnome.org>

	* index.html: 
	* apps.html: changed my email address to damon@gnome.org.

2002-12-02  Damon Chaplin  <damon@gnome.org>

	* glade-2.0.dtd: added to web site, so links from Glade XML files
	point to the DTD.

2002-11-24  Damon Chaplin  <damon@kendo.fsnet.co.uk>

	* apps.html: added glocate2.

	* *.html: updated my email address, and removed old webmaster
	address.

2002-10-28  Damon Chaplin  <damon@ximian.com>

	* index.html: added Yasunari Imado's Japanese translated tutorial.

2002-10-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Meld.

2002-10-08  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gjots.

2002-10-07  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Glade 2 betas.

2002-10-06  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Gnopa.

2002-09-25  Damon Chaplin  <damon@ximian.com>

	* download.html: fix link to tarball.

	* apps.html: added gwaferprog, Gwine, Gspoof.
