@@ -111,6 +111,7 @@ set to 'Glade'.
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
 
+<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.1 Tarball</a> (3.0 MB)<BR>
 <li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.0 Tarball</a> (2.7 MB)<BR>
 <p>
 This version of Glade is for GTK+ 2.x and GNOME 2.x.
