@@ -166,6 +166,21 @@ Oct&nbsp;1&nbsp;2003
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Nov&nbsp;9&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 2.0.1 released !</B>
+<P>
+Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Jul&nbsp;18&nbsp;2003
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
